feat: console 예약 시간 목록 조회 로직 구현